SERVER-44828 Correct logic to re-compute dependencies

We do this after absorbing a $sort into query layer, but this
optimization was accidentally thwarted by a recent bug fix. This patch
restores this optimization.